# itm-tracer

./: Cargo.toml  index.html
frontend/: package.json
frontend/src/: App.css  App.tsx  Domain.ts  connector.ts
frontend/src/arm/: components.ts
frontend/src/components/: Canvas.css  Canvas.tsx  LineSink.tsx  Sidebar.css  Sidebar.tsx  Sink.css  Sink.tsx  State.ts  TextSink.tsx
src/: main.rs  runner.rs  server.rs  updater.rs
src/config/: default.toml  mod.rs
