[package]
name = "itm-tracer"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_json = "1.0"
tungstenite = "0.10.0"
probe-rs = { git = "https://github.com/probe-rs/probe-rs", branch = "itm", version = "0.5.0" }
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.3.0"
structopt = "0.3.2"
failure = "0.1.5"
colored = "1.8.0"
config = "0.9"
lazy_static = "1.3.0"
scroll = "0.10.1"
